# llvm-pretty

./: .gitignore  .travis.yml  CHANGELOG.md  LLVM.hs  Pretty.hs  README.md  llvm-pretty.cabal
.github/workflows/: haskell.yml
examples/: Factorial.hs
src/Text/: LLVM.hs
src/Text/LLVM/: AST.hs  DebugUtils.hs  Labels.hs  Lens.hs  Lint.hs  PP.hs  PP36.hs  Parser.hs  Triple.hs  Util.hs
src/Text/LLVM/AST/: Triple.hs
src/Text/LLVM/PP/: Core.hs
src/Text/LLVM/Triple/: AST.hs  Parse.hs  Print.hs
src/Text/LLVM/Triple/Parse/: ARM.hs
test/: DataLayout.hs  Main.hs  Metadata.hs  Output.hs  TQQDefs.hs  Triple.hs
test/Tests/: AST.hs
