Name:                llvm-pretty
Version:             0.7.4
License:             BSD3
License-file:        LICENSE
Author:              Trevor Elliott
Maintainer:          awesomelyawesome@gmail.com
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.16
Synopsis:            A pretty printing library inspired by the llvm binding.
Description:
  A pretty printing library that was inspired by the LLVM binding by Lennart
  Augustsson.  The library provides a monadic interface to a pretty printer,
  that allows functions to be defined and called, generating the corresponding
  LLVM assembly when run.
tested-with:         GHC==8.4.3, GHC==8.2.2, GHC==8.0.2


source-repository head
  type:                 git
  location:             http://github.com/elliottt/llvm-pretty

Library
  Default-language:    Haskell2010

  Hs-source-dirs:      src
  Exposed-modules:     Text.LLVM
                       Text.LLVM.AST
                       Text.LLVM.AST.Triple
                       Text.LLVM.Labels
                       Text.LLVM.Lens
                       Text.LLVM.Parser
                       Text.LLVM.PP
                       Text.LLVM.DebugUtils
  Other-modules:       Text.LLVM.Util

  Build-depends:       base             >= 4 && < 5,
                       containers       >= 0.4,
                       parsec           >= 3,
                       pretty           >= 1.0.1,
                       monadLib         >= 3.6.1,
                       microlens        >= 0.4,
                       microlens-th     >= 0.4,
                       split            >= 0.2,
                       template-haskell >= 2.7

  Ghc-options:         -Wall

test-suite llvm-pretty-test
    type:                exitcode-stdio-1.0
    main-is:             Main.hs
    other-modules:       Tests.AST
    hs-source-dirs:      test
    default-language:    Haskell2010
    ghc-options:         -W -Wcompat
                         -Wunrecognised-warning-flags
                         -threaded
    -- other-extensions:    OverloadedStrings, TemplateHaskell, RankNTypes
    build-depends: llvm-pretty
                 , base -any
                 , tasty -any
                 , tasty-hunit -any
                 , HUnit -any
